# agent_alpha

./: .env  .env.example  .gitignore  README.md  advanced_wake_word.py  agent_controller.py  api.py  fun_call.py  install.sh  knowledge_base.py  main.py  mcp.py  pyproject.toml  rsa.py  stt.py  stt_whisper.py  tts.py  wake_word.py  weather.py
