[project]
name = "agent-alpha"
version = "0.2.0"
description = "融合API调用的智能助手系统，支持对话、唤醒、多轮对话、知识库学习和Agent角色扮演"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.75.0",
    "mcp>=1.6.0",
    "edge-tts>=7.0.1",
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    "webrtcvad>=2.0.10",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=2.2.5",
    "requests>=2.32.3",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
    "pyaudio>=0.2.14",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
